--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="styles/main.sass.css">
 </head>
 <body>
-<h1>YOUR LOGO   Home   Pricing   Contact</h1>
+<h1> 
+	<span class = "logo">YOUR LOGO</span> 
+	<span class = "home">Home</span>  
+	<span class = "pricing">Pricing</span>   
+	<span class = "contact">Contact</span>
+</h1>
 <section class="background">Simple Pricing.
 	<div class="toptext">Try before you buy.</div>
 </section>
@@ -26,7 +31,7 @@
 			<div>Unlimited bandwidth</div>
 		</section>
 
-		<section class="white">
+		<section class="white2">
 			<div>Choose</div>
 		</section>
 	</div>
@@ -38,7 +43,7 @@
 			<div class="per">PER MONTH</div>
 		 </section> 
 
-		<section class="grey"> 
+		<section class="grey1"> 
 			<div>Free setup</div>
 			<div>Use your own domain</div>
 			<div>Standard customer support</div>
@@ -47,7 +52,7 @@
 			<div>unlimited bandwidth</div>
 		</section> 
 
-		<section class="white">
+		<section class="white3">
 			<div class="white1">Choose</div>
 		</section>
 	</div>
@@ -59,7 +64,7 @@
 			<div class="month">PER MONTH</div>
 		</section>
 
-		<section class="grey">
+		<section class="grey2">
 			<div>Free setup</div>
 			<div>Use your own domain</div>
 			<div>Premium customer support</div>
@@ -68,7 +73,7 @@
 			<div>Unlimited bandwidth</div>
 		</section>
 
-		<section class="white">
+		<section class="white4">
 			<div>Choose</div>
 		</section>
 	</div>
